--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,6 +1,6 @@
 name: eShopOnWeb Build and Test
 
-#Triggers (uncomment line below to use it4)
+#Trig4gers (uncomment line below to use it4)
 on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
