--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-kip
-  LOCATION: westus2
+  LOCATION: Canada Central
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 5adb1d05-e778-4f16-b676-75f0077d9d5c
   WEBAPP-NAME: eshoponweb-webapp46832719
